example/lib/src/generated/errors/errors_localization_el.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Modern Greek (`el`).
class ErrorsLocalizationEl extends ErrorsLocalization {
  ErrorsLocalizationEl([String locale = 'el']) : super(locale);

  @override
  String get error => 'Παρουσιάστηκε σφάλμα';

  @override
  String get unexpectedError => 'Παρουσιάστηκε ένα απροσδόκητο σφάλμα';

  @override
  String get bugReportSentText => 'Η αναφορά σφάλματος στάλθηκε με επιτυχία.';
}
